# phyeston

./: .vimspector.json  Cargo.toml  README.md
shaders/: 2d_vert.glsl  bezier_deformed_vert.glsl  bezier_tsev.glsl  black_hole_frag.glsl  black_hole_vert.glsl  color_frag.glsl  pass_frag.glsl  perspective_vert.glsl  phong_frag.glsl  point_vert.glsl  texture_frag.glsl  texture_vert.glsl
src/: lib.rs  main.rs  window.rs
src/controls/: camera.rs  mod.rs  mouse.rs
src/numerics/: angle.rs  bezier.rs  cylinder.rs  euler.rs  mod.rs  ode.rs  parametric.rs  rect.rs  rotations.rs  runge_kutta.rs  segment.rs
src/numerics/kinematics/: flat_chain.rs  mod.rs
src/numerics/ode/: euler.rs  mod.rs  runge_kutta.rs
src/physics/: inertia.rs
src/presenters/: black_hole.rs  hodograph.rs  jelly.rs  kinematic_chain.rs  mod.rs  parametrizable_function.rs  puma.rs  quaternions.rs  spinning_top.rs  spring.rs
src/render/: color.rs  drawbuffer.rs  gl_mesh.rs  gl_program.rs  gl_texture.rs  gridable.rs  mesh.rs  mod.rs  models.rs  opengl.rs  shader.rs  texture.rs
src/simulators/: jelly.rs  kinematic_chain.rs  mod.rs  puma.rs  spinning_top.rs  spring.rs
src/ui/: widgets.rs
