[package]
name = "phyesthon"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[dependencies]
egui = { version = "0.23.0", features = ['default_fonts'] }
egui_glow = { version = "0.23.0", features = ['winit']}
egui-winit = { version = "0.23.0" }
glow = "0.12.3"
glutin = "0.30.10"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.0"
