[package]
name = "phyesthon"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[dependencies]
itertools = "0.11.0"
nalgebra = "0.32.3"
egui = { version = "0.23.0", features = ['default_fonts'] }
egui_glow = { version = "0.23.0", features = ['winit']}
egui_plot = "0.23.0"
egui-winit = { version = "0.23.0" }
glow = "0.12.3"
glutin = "0.30.10"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.0"
